Use/use.css
body{
	text-align:center;
	background-image:url('https://upload.wikimedia.org/wikipedia/commons/5/52/Parrot_AR.Drone_2.JPG');
	background-attachment:fixed;
	background-position: center;
	background-size:cover;
	overflow-x:hidden;
}

/*h1{
	margin:30vh;
	font-size:300%;
	background:rgba(236, 240, 241,0.8);
}*/
#BigTitle{
    transform:translateY(-50%);
	font-size:300%;
	width:80vw;
	margin: 40vh auto;
	min-height:initial;
	padding-bottom:0;
}

.SectionTitle{
	padding: 5vh;
	width:80vw !important;
	min-height:initial !important;
	margin-left:10vw;
	position:relative !important;
	top:-5vh !important;
}
.SectionTitle h2{
	margin-bottom:2vw;
}




section{
	margin:0;
}
p{
	margin:0;
	padding: 10px;
	transform:preserve-3d;
}







#Del{
	background-image:url("/img/Amazon.jpg");
	background-attachment:fixed;
	background-position: center;
	background-size:cover;
	padding-bottom:2vw;
}

#Del .SectionTitle{
	background: #4FC3F7;
}







#Film{
	background-image:url('https://static.pexels.com/photos/8338/pexels-photo.jpg');
	background-attachment:fixed;
	background-position: center;
	background-size:cover;
	padding-bottom:2vw;
}
#Film .SectionTitle{
	background: #E57373;
}







#Fun{
	background-image:url('https://upload.wikimedia.org/wikipedia/commons/1/17/2014_prototype_of_the_Nixie_drone_flown_by_Christoph_Kohstall.png');
	background-attachment:fixed;
	background-position: center;
	background-size:cover;
	padding-bottom:2vw;
}
#Fun .SectionTitle{
	background: #81C784;
}










.DarkCard{
	color:#FAFAFA !important;
	background: #212121 !important;
}
.DarkCard .mdl-card__supporting-text{
	color:#FAFAFA !important;
}




.Box{
	width:96%;
	/*min-height:20vh;*/
	margin-left:2vw;
	position:relative;
	text-align:left;
	margin-bottom:5vh;
}
.Box .Pic{
	width:40%;
	position:relative;
	z-index:1;
	overflow-y:hidden;
	display:inline-block;
	background:initial !important;
	/*border-radius:3vh;*/
}
.Box .Pic .PicOverlay{
	position:absolute;
	bottom:0;
	transform:translateY(100%)translateZ(0);
	transition: transform 0.5s ease;
	/*background:rgba(0,0,0,0.5);*
	background:white;*/
	width:100%;
	height:20%;
	min-height:120px !important;
	/*text-align:center;
	/*color:white;*/
}
.Box .Pic img{
	object-fit:cover;
	object-position:center;
	width:100%;
	height:50vh;
	display:block;
}
.Box .BoxTitle{
	position:absolute;
	z-index:0;
	width:55%;
	top:50%;
	transform:translate(0, -50%)translateZ(0);
	text-align:center;
	transition: transform 0.5s ease, opacity 0.5s ease;
	/*text-shadow:		-1px -1px 0 white,  		1px -1px 0 white,		-1px 1px 0 white,		1px 1px 0 white;*/
	min-height:initial;
}
.Box .Text{
	transition: transform 0.5s ease, opacity 0.5s ease;
	display: flex;
	flex-direction: column;
	justify-content: center;
	padding:0 1vw;
	height:80%;
	width:55%;
	position:absolute;
	z-index:0;
	/*background:black;
	color:white;*/
	top:10%;
	left:40%;
	opacity: 0;
}
.Box .Text p{
	overflow-y:auto;
}
.Box:hover .Pic .PicOverlay{
	transform:translateY(0)translateZ(0);
}






.LeftBox .BoxTitle{
	left:45%;
}
.LeftBox .Text{
	transform:translateX(-20%)translateZ(0);
	/*border-radius: 0 3vh 3vh 0;*/
}

.LeftBox:hover .BoxTitle{
	transform:translate(30vw, -50%)translateZ(0);
	opacity:0;
}
.LeftBox:hover .Text{
	transform:translateX(5%)translateZ(0);
	opacity:1;
}



.RightBox{
	text-align:right;
}
.RightBox .BoxTitle{
	right:45%;
}
.RightBox .Text{
	transform:translateX(-50%)translateZ(0);
	/*border-radius: 3vh 0 0 3vh;*/
}


.RightBox .mdl-card__title, .RightBox .mdl-card__title-text{
	display:block !important;
}
.RightBox .mdl-card__supporting-text{
	display:block;
	width:calc(100% - 32px);
}


.RightBox:hover .BoxTitle{
	transform:translate(-30vw, -50%)translateZ(0);
	opacity:0;
}
.RightBox:hover .Text{
	transform:translateX(-70%)translateZ(0);
	opacity:1;
}



@media (max-width : 600px) {
	.Box{
		width:80vw;
		position:static !important;
		margin: 20px auto;
	}
	.BoxTitle{
		transform:translateZ(0) !important;
		opacity:1 !important;
		position:static !important;
		width:100% !important;
		border-bottom-left-radius:0 !important;
		border-bottom-right-radius:0 !important;
	}
	.Pic{
		width:100% !important;
		left:0;
		margin:0 !important;
		border-radius:0 !important;
	}
	.Pic img{
		height:30vh !important;
	}
	.Text{
		opacity:1 !important;
		transform:translateY(-5px) !important;
		position:static !important;
		width:100% !important;
		margin:0 !important;
		border-top-left-radius:0 !important;
		border-top-right-radius:0 !important;
	}
	.PicOverlay{
		display:none !important;
	}
	
	
	.SectionTitle{
		padding: 5vh;
		width:80vw !important;
		min-height:initial !important;
		margin-left:auto;
		margin-right:auto;
		position:static !important;
		transform:translateY(-5vh);
	}
	.SectionTitle h2{
		margin-bottom:2vw;
	}
	
	section{
		padding-bottom:40px !important;
	}
	#BigTitle{
		padding-bottom:0 !important;
	}
}

